[gd_scene load_steps=9 format=3 uid="uid://da5mgweseqa6w"]

[ext_resource type="Texture2D" uid="uid://c83n1oi7sibxh" path="res://sprites/hol.png" id="1_clcuf"]
[ext_resource type="Script" path="res://hol_dreapta.gd" id="1_lfqs0"]
[ext_resource type="Texture2D" uid="uid://m05tk07uvocm" path="res://sprites/lumina_hol.png" id="2_dvira"]
[ext_resource type="Texture2D" uid="uid://b4s6qu5wgw83a" path="res://sprites/2d_lights_and_shadows_neutral_point_light.webp" id="3_wsfxq"]
[ext_resource type="Texture2D" uid="uid://iombo211lffq" path="res://sprites/Screenshot_2024-04-01_200719-removebg-preview.png" id="5_h5uvt"]
[ext_resource type="Texture2D" uid="uid://g7ydhfo54fe6" path="res://sprites/perete.png" id="6_wu75a"]
[ext_resource type="Texture2D" uid="uid://q7mvorxppr7m" path="res://sprites/hol_usa_inchisa.png" id="7_n8j4c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oumx7"]
size = Vector2(2151, 123)

[node name="hol_dreapta" type="Node2D"]
script = ExtResource("1_lfqs0")

[node name="hol" type="Sprite2D" parent="."]
position = Vector2(1085, 542.75)
scale = Vector2(31, 31.0143)
texture = ExtResource("1_clcuf")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.95
blend_mode = 1

[node name="LuminaMica" type="PointLight2D" parent="."]
position = Vector2(1087.5, 543)
scale = Vector2(1.34688, 0.898333)
energy = 0.3
texture = ExtResource("2_dvira")
texture_scale = 2.0

[node name="LuminaMare" type="PointLight2D" parent="."]
position = Vector2(691, 626)
scale = Vector2(0.84933, 0.875)
energy = 1.7
texture = ExtResource("3_wsfxq")
texture_scale = 3.5

[node name="Go_Back" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Go_Back"]
position = Vector2(1094, 1016.5)
shape = SubResource("RectangleShape2D_oumx7")

[node name="Perete" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(220, 542)
scale = Vector2(31, 31)
texture = ExtResource("6_wu75a")

[node name="Brandon" type="Sprite2D" parent="."]
position = Vector2(415, 642)
rotation = 0.261799
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_h5uvt")

[node name="Brandon_close" type="Sprite2D" parent="."]
position = Vector2(685, 857)
rotation = -0.0698132
scale = Vector2(2, 2)
texture = ExtResource("5_h5uvt")

[node name="hol_usa_inchisa" type="Sprite2D" parent="."]
position = Vector2(1085, 542.75)
scale = Vector2(31, 31.0143)
texture = ExtResource("7_n8j4c")

[node name="door_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="mouse_entered" from="Go_Back" to="." method="_on_go_back_mouse_entered"]
[connection signal="mouse_exited" from="Go_Back" to="." method="_on_go_back_mouse_exited"]
[connection signal="timeout" from="door_timer" to="." method="_on_door_timer_timeout"]
